fixes: minor changes